# CuckooDuo

./: README.md
cpu/: AdjustmentInBucketvsLFvsSIGLEN.sh  CuckooDuo.h  CuckooDuoExtra.h  CuckooDuoNewLessFPCalc.h  CuckooDuoSIGLEN.h  CuckooDuoStashSize.h  CuckooDuoWithCache.h  CuckooSingle.h  CuckooSingleDFSOnePath.h  CuckooSingleSigbit.h  LF_vs_StashSize.cpp  LFvsSIGLEN_FPRvsSIGLEN.sh  LFvsStashSize.sh  LPH.h  LocalLatency.sh  MapEmbed.h  README.md  RaceDict.h  Rebuild_skeleton.h  SimpleCache.h  SmoothExpansionFramework.h  adjustmentCounter.cpp  bfs_test_twohash.cpp  bpk_lf_siglen_ours_vs_single.sh  bucket_sizeVSload_factor.py  cacheExperiment.cpp  change-para.py  cuckoo_group_bfs.h  cuckoo_group_bfs_twohash.h  cuckoo_group_bfs_twohash_expand.h  cuckoo_group_bfs_twohash_move_less.h  cuckoo_group_bfs_twohash_siglen.h  cuckoo_group_dfs.h  cuckoo_group_dfs_random.h  differentSIGLEN.cpp  experiment.py  extra_experiment.py  get_5g.py  local_latency.cpp  main.cpp  (+9 more)
math/: 4a_SingleCollide.cpp  4a_SingleCollide.py  4b_4c_CollideItems.cpp  4b_CollideItems.py  4c_CollideItems.py  4d_BFSfailure.cpp  4d_BFSfailure.py  5a_SingleCollide.cpp  5b_5c_CollideItems.cpp  5b_CollideItems.py  5d_BFSfailure.cpp  5d_BFSfailure.py  6a_SingleCollide.cpp  6a_SingleCollide.py  6b_CollideItems.py  6c_CollideItems.py  6d_BFSfailure.cpp  6d_BFSfailure.py  CuckooDuo.h  CuckooSingle.h  CuckooSingle_BFSfailure.h  README.md
testbed/: CMakeLists.txt  README.md
testbed/algorithms/: SimpleCache.h  cuckooduo.h  cuckooduo_large.h  cuckooduo_largeKV.h  cuckooduo_siglen.h  mapembed.h  mapembed_largeKV.h  race.h  race_largeKV.h  tea.h  tea_largeKV.h
testbed/rdma/: rdma_client.h  rdma_client_largeKV.h  rdma_common.cpp  rdma_common.h  rdma_server.cpp  rdma_server.h
testbed/test/: test_bpk_latency.cpp  test_expand.cpp  test_expand2.cpp  test_expand3.cpp  test_hybrid.cpp  test_hybrid_cache.cpp  test_hybrid_multi.cpp  test_hybrid_single.cpp  test_largeKV_latency.cpp  test_largeKV_mops.cpp  test_large_latency.cpp  test_large_multi.cpp  test_latency.cpp  test_multi.cpp  test_multi_insert.cpp  test_multi_lf.cpp  test_partial_insert.cpp  test_partial_query.cpp  test_query_cache.cpp  test_rtt_insert.cpp  test_stash.cpp  test_workloada.cpp  test_workloadd.cpp
testbed/ycsb_header/: ycsb_cuckooduo.h  ycsb_cuckooduo_large.h  ycsb_cuckooduo_largeKV.h  ycsb_cuckooduo_siglen.h  ycsb_mapembed.h  ycsb_mapembed_largeKV.h  ycsb_race.h  ycsb_race_largeKV.h  ycsb_read.h  ycsb_tea.h  ycsb_tea_largeKV.h
workload/: README.md  load-64K.txt  load_10-64K.txt  load_20-64K.txt  load_30-64K.txt  load_40-64K.txt  load_50-64K.txt  load_60-64K.txt  load_70-64K.txt  load_80-64K.txt  load_90-64K.txt  run_10-64K.txt  run_18M_zipf-64K.txt  run_20-64K.txt  run_30-64K.txt  run_40-64K.txt  run_50-64K.txt  run_60-64K.txt  run_70-64K.txt  run_80-64K.txt  run_90-64K.txt  run_workloada_latest-64k.txt  run_workloada_our_zipf090-64k.txt  run_workloada_uniform-64k.txt  run_workloada_zipfian-64k.txt  run_workloadd_latest-64k.txt  run_workloadd_our_zipf090-64k.txt  run_workloadd_uniform-64k.txt  run_workloadd_zipfian-64k.txt
